files/iptables.rules
# Generated by iptables-save v1.4.14 on Sun Jun 30 18:27:30 2013
*filter
:INPUT ACCEPT [1176:244207]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [779:127844]
-A INPUT -i wlan0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i wlan0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -i wlan0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i wlan0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i wlan0 -p udp -m udp --dport 68 -j ACCEPT
-A INPUT -i wlan0 -p icmp -m icmp --icmp-type 8 -j ACCEPT
# Uncomment the line below if you want to allow SSH access from the wifi
-A INPUT -i wlan0 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i wlan0 -j REJECT --reject-with icmp-port-unreachable
COMMIT

*nat
:PREROUTING ACCEPT [28:3512]
:INPUT ACCEPT [25:3392]
:OUTPUT ACCEPT [6:756]
:POSTROUTING ACCEPT [5:604]
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
